[gd_scene load_steps=7 format=3 uid="uid://7505ftg551uw"]

[ext_resource type="Script" path="res://scene/instruction/Operation/SetInstruction.gd" id="1_1bhmc"]
[ext_resource type="Script" path="res://scene/instruction/Base/BaseRow.gd" id="2_3gp6o"]
[ext_resource type="Script" path="res://scene/instruction/Base/BaseLine.gd" id="3_6mm1g"]
[ext_resource type="PackedScene" uid="uid://cxkqo32fuxva3" path="res://scene/instruction/Base/TextInput.tscn" id="3_uqpsl"]
[ext_resource type="Script" path="res://scene/instruction/Base/ColorLabel.gd" id="4_vf7ru"]
[ext_resource type="Script" path="res://scene/instruction/Base/BaseLineColor.gd" id="5_vqg2r"]

[node name="SetInstruction" type="Panel"]
script = ExtResource("1_1bhmc")

[node name="BaseRow" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_3gp6o")

[node name="BaseLine" type="Control" parent="BaseRow"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_6mm1g")

[node name="Label" type="Label" parent="BaseRow/BaseLine"]
offset_right = 27.0
offset_bottom = 26.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/outline_size = 5
text = "SET"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_vf7ru")

[node name="BaseLineColor" type="Panel" parent="BaseRow"]
offset_left = 44.0
offset_top = -132.0
offset_right = 84.0
offset_bottom = -92.0
script = ExtResource("5_vqg2r")

[node name="TextInput" parent="BaseRow/BaseLineColor" instance=ExtResource("3_uqpsl")]
offset_left = -289.0
offset_top = 30.0
offset_right = -289.0
offset_bottom = 30.0

[node name="Label" type="Label" parent="BaseRow/BaseLineColor"]
offset_left = -198.0
offset_top = 37.0
offset_right = -158.0
offset_bottom = 63.0
text = "="
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextInput2" parent="BaseRow/BaseLineColor" instance=ExtResource("3_uqpsl")]
offset_left = -93.0
offset_top = -75.0
offset_right = -93.0
offset_bottom = -75.0
